--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@
 
 ### Ignorer les fichiers générés ###
 /node_modules/
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
+.env.dev
